fix UI alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -79,7 +79,7 @@ a {
   margin: auto;
   position: fixed;
   top: 0;
-  right: 40px;
+  right: 30px;
   z-index: 3;
   height: 35px;
   margin-top: 75px;
@@ -445,6 +445,10 @@ a:hover {
   margin-bottom: 10px;
 }
 
+.contact_me > p {
+  line-height: 28px;
+}
+
 .footer {
   width: 100%;
   height: 30px;
@@ -468,6 +472,8 @@ a:hover {
 .flaticon__attribute {
   display: block;
   text-align: center;
+  padding: 0 15px;
+  line-height: 28px;
   margin: 10px auto;
   margin-bottom: 20px;
 }
